@@ -338,14 +338,14 @@
 			<label index="v_follow_instructions_review2_informal">Please be aware that after you confirm your registration, it will need to be reviewed by the administrator before you gain access to the section &lt;b&gt;%1$s&lt;/b&gt; of our website.</label>
 			<label index="v_registration_initiated_subject">Please confirm your registration with &lt;b&gt;%1$s&lt;/b&gt;.</label>
 			<label index="v_registration_initiated_subject_informal">Please confirm your registration with &lt;b&gt;%1$s&lt;/b&gt;.</label>
-			<label index="v_registration_initiated_message1">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br /&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br /&gt;&lt;br /&gt;\nTo confirm your membership please click on this link</label>
-			<label index="v_registration_initiated_message1_informal">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br /&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br /&gt;&lt;br /&gt;\nTo confirm your membership please click on this link</label>
+			<label index="v_registration_initiated_message1">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br /&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br /&gt;&lt;br /&gt;To confirm your membership please click on this link</label>
+			<label index="v_registration_initiated_message1_informal">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br /&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br /&gt;&lt;br /&gt;To confirm your membership please click on this link</label>
 			<label index="v_registration_initiated_message2">If, for any reason, you do not wish to continue the registration process, or you have received this message in error, please click on this link</label>
 			<label index="v_registration_initiated_message2_informal">If, for any reason, you do not wish to continue the registration process, or you have received this message in error, please click on this link</label>
 			<label index="v_registration_initiated_message3">Please feel free to ask us any questions, or  tell us anything about the registration process, or make any other constructive comments by sending an e-mail to</label>
 			<label index="v_registration_initiated_message3_informal">Please feel free to ask us any questions, or  tell us anything about the registration process, or make any other constructive comments by sending an e-mail to</label>
-			<label index="v_registration_initiated_review1">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br /&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br /&gt;&lt;br /&gt;\nTo confirm your membership please click on this link</label>
-			<label index="v_registration_initiated_review1_informal">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br /&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br /&gt;&lt;br /&gt;\nTo confirm your membership please click on this link</label>
+			<label index="v_registration_initiated_review1">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br /&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br /&gt;&lt;br /&gt;To confirm your membership please click on this link</label>
+			<label index="v_registration_initiated_review1_informal">Thank you for your application to become a member of &lt;b&gt;%1$s&lt;/b&gt;. &lt;br /&gt;Everyone is welcome to browse around our website but you will need to confirm your membership to have unrestricted access to all areas.&lt;br /&gt;&lt;br /&gt;To confirm your membership please click on this link</label>
 			<label index="v_registration_initiated_review2">Please be aware that after you confirm your registration, it will need to be reviewed by the administrator before you gain access to the section &lt;b&gt;%1$s&lt;/b&gt; of our website.</label>
 			<label index="v_registration_initiated_review2_informal">Please be aware that after you confirm your registration, it will need to be reviewed by the administrator before you gain access to the section &lt;b&gt;%1$s&lt;/b&gt; of our website.</label>
 			<label index="v_registration_initiated">%3$s initiated his(her) registration in %1$s.</label>
